--- a/.github/workflows/nightly-v1.yml
+++ b/.github/workflows/nightly-v1.yml
@@ -34,10 +34,10 @@ jobs:
           DAYOFWEEK=$(date +"%a")
           if [[ "$DAYOFWEEK" == "${{ env.DAY_RUN_BLD_FULL_TEST }}" ]] ; then
             echo RUN_BUILD=YES >> $GITHUB_ENV
-            echo "::set-output name=INSTALL_TEST::Zowe Release Tests"
+            echo "INSTALL_TEST=Zowe Release Tests" >> $GITHUB_OUTPUT
             echo "Today is $DAYOFWEEK, need to run build and full release test suite"
           else
-            echo "::set-output name=INSTALL_TEST::Zowe Nightly Tests"
+            echo "INSTALL_TEST=Zowe Nightly Tests" >> $GITHUB_OUTPUT
             echo "Today is $DAYOFWEEK, do not need to run build and full release test suite"
           fi
 
@@ -56,7 +56,7 @@ jobs:
           time-difference-threshold-min: ${{ env.FORCE_BUILD_TIME_THRESHOLD }}
 
       - id: set-outputs
-        run: echo "::set-output name=RUN_BUILD::${{ env.RUN_BUILD }}"
+        run: echo "RUN_BUILD=${{ env.RUN_BUILD }}" >> $GITHUB_OUTPUT
 
     outputs:
       RUN_BUILD: ${{ steps.set-outputs.outputs.RUN_BUILD }}
