update source zip env
Signed-off-by: MarkAckert <mark.ackert@broadcom.com>

--- a/.github/workflows/release-v3.yml
+++ b/.github/workflows/release-v3.yml
@@ -136,6 +136,8 @@ jobs:
       - name: '[Source - formal release only!] Generate source build'
         timeout-minutes: 10
         if: env.IS_FORMAL_RELEASE == 'true'
+        env: 
+          WORK_BRANCH: v3.x/master
         run: |
           export GITHUB_USERNAME=${{ secrets.ZOWE_ROBOT_USER }}
           export GITHUB_PASSWORD=${{ secrets.ZOWE_ROBOT_TOKEN }}
