--- a/.github/workflows/nightly-v3.yml
+++ b/.github/workflows/nightly-v3.yml
@@ -102,7 +102,7 @@ jobs:
           validate-cli-python-sdk: false
           validate-cli-nodejs-sdk: false
           validate-cli-nodejs-sdk-typedoc: false
-          validate-pswi: false
+          validate-pswi: true
 
       # Above step 'Validate' will generate a file (name is stored in its outputs.PROMOTE_JSON_FILE_NAME_FULL)
       # file name is: promote-artifacts.json
