--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@actions/core": "^1.6.0",
     "@actions/github": "^5.0.0",
     "debug": "^4.3.2",
+    "semver": "^7.6.3",
     "zowe-common": "github:zowe-actions/zowe-common"
   }
 }
