--- a/.github/workflows/nightly-v2.yml
+++ b/.github/workflows/nightly-v2.yml
@@ -1,8 +1,8 @@
 name: Zowe Nightly Pipeline for v2
 on:
   schedule:
-    # this sets to 4.10am everyday UTC time, 12.10am EST
-    - cron: '10 4 * * *'
+    # this sets to 1.10am everyday UTC time, 09.10 PM EST
+    - cron: '10 1 * * *'
   workflow_dispatch:
     inputs:
       skip-promote:
