fix release workflow for v3, env var never exists
Signed-off-by: MarkAckert <mark.ackert@broadcom.com>

--- a/.github/workflows/release-v3.yml
+++ b/.github/workflows/release-v3.yml
@@ -271,7 +271,7 @@ jobs:
           git push origin "v$zowe_release_version"
 
       - name: '[Promote PTF 1 - formal release only!] Clone staging branch'
-        if: ${{ env.IS_FORMAL_RELEASE == 'true' && env.SMPE_PTF_PROMOTE_TAR_PATH != '' && env.IS_PTF_RELEASE}}
+        if: ${{ env.IS_FORMAL_RELEASE == 'true' && env.SMPE_PTF_PROMOTE_TAR_PATH != '' }}
         uses: actions/checkout@v2
         with:
           repository: ${{ env.ZOWE_INSTALL_PACKAGING_OWNER }}/${{ env.ZOWE_INSTALL_PACKAGING_REPO }}
